# mini-synth

./: .gitignore  adsr.py  adsr_test.ipynb  adsr_test.py  amplifier.py  graph.py  lpfilter.py  main.ipynb  main.py  midi.py  mixer.py  node.py  pyproject.toml  rack.py  readme.md  sound.ipynb  vco.py  voltage.py
examples/: adsr.py  midi.py  modulation.py  simple.py
synth/: adsr.py  amplifier.py  graph.py  lpfilter.py  minisynth.py  mixer.py  node.py  rack.py  vco.py  voltage.py
