[tool.poetry]
name = "mini-synth"
version = "0.1.0"
description = ""
authors = ["alelouis <me@alelouis.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
graphviz = "^0.20"
numpy = "^1.22.4"
black = "^22.3.0"
pre-commit = "^2.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
